# jolt

./: Cargo.toml
common/src/: rv_trace.rs
examples/verifier/: Cargo.toml
examples/verifier/guest/: Cargo.toml
examples/verifier/src/: main.rs
jolt-core/: .gitignore  Cargo.toml  input.json  trace_16.json  trace_t.json
jolt-core/benches/: iai.rs
jolt-core/src/: lib.rs
jolt-core/src/benches/: bench.rs
jolt-core/src/field/: ark.rs  mod.rs
jolt-core/src/lasso/: memory_checking.rs  surge.rs
jolt-core/src/msm/: mod.rs
jolt-core/src/parse/: commit.rs  mod.rs  spartan_hkzg.rs  spartan_hyrax.rs
jolt-core/src/poly/: eq_poly.rs  multilinear_polynomial.rs  opening_proof.rs  spartan_interleaved_poly.rs  streaming_poly.rs  structured_poly.rs  unipoly.rs
jolt-core/src/r1cs/: builder.rs  inputs.rs  jolt_constraints.rs  key.rs  mod.rs  spartan.rs  spartan_2.rs  spartan_helper.rs
jolt-core/src/spartan/: mod.rs  r1csinstance.rs  spartan_memory_checking.rs
jolt-core/src/subprotocols/: mod.rs  sumcheck.rs
jolt-core/src/test_circom/: helper_bytecodeproof.rs  helper_grand_product.rs  helper_hyperkzg.rs  helper_joltdevice.rs  helper_non_native.rs  helper_preprocessing.rs  helper_read_write_mem_proof.rs  helper_reduced_opening_proof.rs  helper_stuff.rs  helper_sum_check.rs  helper_transcript.rs  mod.rs  (+1 more)
jolt-evm-verifier/script/: Cargo.toml
jolt-on-chain/: Cargo.toml  go.mod  go.sum
jolt-on-chain/src/: go.mod  go.sum
riscv_compilation/: Cargo.toml  README.md  analyze.sh  build.sh
riscv_compilation/.cargo/: config.toml
riscv_compilation/src/: main.rs
(+119 files in other folders)
