[package]
name = "riscv_compilation"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
rand_chacha = { version = "0.3", default-features = false }
rand_core = "0.6"
ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
] }
ark-ff = { version = "0.5.0", default-features = false }
jolt-core = { package = "jolt-core", path = "../jolt-core" }

#
#[profile.release]
#lto = true
#codegen-units = 1
#panic = "abort"
#opt-level = "s"  # Optimize for size

